css/general.css
body {
    height: 100%;
    width: 100%;
}

/*global*/
.sidebar-container{
    height: 100%; /* Full-height: remove this if you want "auto" height */
    width: 286px; /* Set the width of the sidebar */
}

.sidenav {
    margin-top : 8vh;
    height: 92%;
    width: 286px; /* Set the width of the sidebar */
    overflow-y : auto;
    overflow-x : visible;
    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
    z-index: 1; /* Stay on top */
    top: 0; /* Stay at the top */
    left: 0;
    background-color: #111; /* Black */
}


#tilesSelectorBar{
    height: 8%; /* Full-height: remove this if you want "auto" height */
    width: 286px; /* Set the width of the sidebar */
    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
    z-index: 5; /* Stay on top */
    top: 0; /* Stay at the top */
    left: 0;
    background-color: #000; /* Black */
}

.map {
    height: 95%;/* Full-height: remove this if you want "auto" height */
    width: 100%; /* Set the width of the sidebar */
    overflow-y : auto;
    overflow-x : visible;
    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
    top: 0; /* Stay at the top */
    left: 286;
    background-image: url('../assets/background.jpg');
    background-attachment:local;
}

.control_bar{
    width: 100%;
    height: 5%;
    position: fixed;
    z-index: 1;
    bottom: 0;
    left: 286px;
    background-color: #111;
}
/*global*/


/*bottom bar*/

.blueButton {
    height: 90%;

	box-shadow:inset 0px -3px 7px 0px #0000cc;
	background:linear-gradient(to bottom, #000000 5%, #350b8f 100%);
	background-color:#000000;
	border-radius:10px;
	border:2px solid #0020c2;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
	font-size:20px;
    
    padding:16px 20px;
    margin-top: 4px;
    margin-bottom: 4px;
	text-decoration:none;
	text-shadow:0px 1px 0px #000000;
}
.blueButton:hover {
	background:linear-gradient(to bottom, #350b8f 5%, #000000 100%);
	background-color:#350b8f;
}
.blueButton:active {
	margin-top:10px;
}

.craeteTextBoxButton{
    height: 100%;
    margin-left: 32px;
    background-color: black;
    font-size: 32px;
    font-weight: bold;
    color: white;
}
/*bottom bar*/


/*output and html2canvas max dimension*/
#output{
    position: fixed;
    left: 1200px;
    
    /*background-color: black;*/
    background-image: url('../assets/pdf_background.jpg');
}

.html2canvas-container { width: 4000px !important; height: 4000px !important; }
/*output and html2canvas max dimension*/


/*modal*/
.modal-full {
    min-width: 80%;
    margin-left: 80;
}

.modal-full .modal-content {
    min-height: 90vh;
}

.modal-full .modal-header {
    min-height: 4vh;
}

.modal-full .modal-body {
    max-height: 86vh;
    overflow: auto;
}

#mapRendered{
    height: 81vh;
    float: right;
}

.labelBig{
    font-size: 32px;
}

.checkmark {
    height: 32px;
    width: 32px;
}

.exportPDFButton{
    background-color: black;
    font-size: 32px;
    font-weight: bold;
    color: white;
}
/*modal*/

.card button{
    font-size: 32px;
}

.card textarea{
    max-width: 100%;
}

